# notcurses

./: .drone.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  INSTALL.md  NEWS.md  OTHERS.md  README.md  TERMINALS.md  TERMS.md  USAGE.md  index.html
.github/: FUNDING.yml
3.0.0/: readme.md
cffi/: .gitignore  LICENSE.txt  ncdirect-pydemo  ncdirect-pydemo.1.md  notcurses-pydemo.1.md  setup.cfg  setup.py
data/: changes.xcf  fm6.mov  natasha-blur.xcf  normal.xcf  notcursesI.avi  notcursesI.osp  notcursesII.mkv  notcursesIII.mkv  notcursesIII.mov  samoa.avi  samoa.osp  tetris-background.xcf
debian/: README.source  changelog  control  copyright  libnotcurses++-dev.install  libnotcurses++1.install  libnotcurses++1.symbols  libnotcurses-dev.install  libnotcurses0.install  libnotcurses1.install  libnotcurses1.symbols  notcurses-bin.install  notcurses-data.install  python3-notcurses.install  python3-notcurses.postinst  python3-notcurses.prerm  rules  watch
doc/: 0001-console-answer-OSC-10-and-11.patch  CONTRIBUTING.md  CURSES.md  Doxyfile  FreeBSD-Makefile  HACKING.md  HISTORY.md  OTHERS.md  analytics-header.html  model.dot  proposed-terminfo.md  release-checklist.md  sexblitter-perfection.xcf  testing-checklist.md  worldmap-sexblitter.xcf
dtests/: cell.cpp  egcpool.cpp  enmetric.cpp  fade.cpp  internal.cpp  ncplane.cpp  notcurses.cpp
include/: enmetric.h  notcurses.h
python/: .gitignore  .readthedocs.yml  CMakeLists.txt  HACKING.md  README.md  notcurses-direct-pydemo  notcurses-direct-pydemo.1.md  notcurses-pydemo  notcurses-pydemo.1.md  setup.cfg.in  setup.py  setup.py.in
python/docs/: conf.py  index.rst  nc_context.rst  nc_direct.rst  nc_input.rst  nc_misc.rst  nc_plane.rst
python/examples/: 000-print-version.py  001-init-notcurses.py  002-hello-world.py  003-color-example.py  004-dimensions.py  005-nc-direct-print-used-memory-bars.py  006-input-tester.py  007-plane_split.py  008-put-lines.py  009-box.py
python/notcurses/: __init__.py  _notcurses.c  _notcurses.py  channels.c  context.c  functions.c  main.c  misc.c  notcurses-python.h  notcurses.py  plane.c
python/src/: notcurses.py
python/src/notcurses/: __main__.py  build_notcurses.py  notcurses.py
rust/: Cargo.toml  LICENSE-MIT  README.md
rust/.cargo/: config.toml
rust/examples/: direct-capabilities.rs  direct-cursor.rs  direct-image-c.rs  direct-image-rust.rs  direct-image.rs  direct-text.rs  full-basics.rs  full-capabilities.rs  full-input.rs  full-planes.rs  full-text.rs  issue-1509.rs  issue-1559.rs  issue-1573.rs  issue-1699.rs  issue-1716.rs  issue-1732.rs  issue-1751.rs  issue-1753.rs  issue-1832.rs  issue-rgb_packed.rs  issue-rgba.rs  pixel-cell.rs  poc-cjkscroll.rs  poc-direct.rs  poc-kittyzapper.rs  poc-menu.rs  poc-planebase.rs
rust/libnotcurses-sys/: Cargo.toml  build.rs  stdout.c  wrapper.h
rust/libnotcurses-sys/.cargo/: config.toml
rust/libnotcurses-sys/src/: cells.rs  channel.rs  channels.rs  key.rs  keycodes.rs  lib.rs  nc.rs  palette.rs  pixel.rs  plane.rs  types.rs
rust/notcurses/: Cargo.toml
rust/notcurses/src/: channels.rs  lib.rs
rust/src/: bindings.rs  box.rs  capabilities.rs  cells.rs  channel.rs  dimension.rs  direct.rs  error.rs  fade.rs  file.rs  input.rs  key.rs  keycodes.rs  lib.rs  macros.rs  metric.rs  nc.rs  notcurses.rs  palette.rs  pixel.rs  plane.rs  resizecb.rs  signal.rs  stats.rs  time.rs  types.rs  visual.rs
rust/src/cells/: constructors.rs  methods.rs  mod.rs  reimplemented.rs  tests.rs  wrapped.rs
rust/src/cells/test/: methods.rs  mod.rs  reimplemented.rs
rust/src/channel/: methods.rs  mod.rs  reimplemented.rs  tests.rs  types.rs
rust/src/channel/test/: methods.rs  mod.rs  reimplemented.rs
rust/src/direct/: methods.rs  mod.rs  reimplemented.rs  types.rs  wrapped.rs  wrapper.rs
rust/src/fd/: methods.rs
rust/src/input/: key.rs  keycodes.rs  mod.rs
rust/src/notcurses/: constructors.rs  helpers.rs  methods.rs  mod.rs  reimplemented.rs  tests.rs  types.rs  wrapped.rs  wrapper.rs
rust/src/notcurses/test/: methods.rs  mod.rs  reimplemented.rs
rust/src/palette/: methods.rs  mod.rs  reimplemented.rs
rust/src/plane/: constructors.rs  helpers.rs  methods.rs  mod.rs  reimplemented.rs  tests.rs  types.rs  wrapped.rs
rust/src/plane/test/: methods.rs  mod.rs  reimplemented.rs
rust/src/types/: cell.rs  channel.rs  colors.rs  file.rs  misc.rs  mod.rs  plane.rs  terminal.rs  widgets.rs
rust/src/visual/: methods.rs  mod.rs
rust/src/widgets/: menu.rs  mod.rs  reader.rs  stats.rs
rust/src/widgets/menu/: methods.rs  mod.rs  types.rs
rust/src/widgets/menu/methods/: menu.rs  mod.rs  options.rs
rust/src/widgets/multiselector/: mod.rs  types.rs
rust/src/widgets/plot/: mod.rs  types.rs
rust/src/widgets/progbar/: methods.rs  mod.rs
rust/src/widgets/reader/: methods.rs  mod.rs  types.rs
rust/src/widgets/reel/: mod.rs  types.rs
rust/src/widgets/selector/: mod.rs  types.rs
rust/src/widgets/tree/: mod.rs
rust/src/widgets/tree/methods/: mod.rs  options.rs  tree.rs
rust/tests/: notcurses.rs
rustdoc/: crates.js  search-index.js  settings.html  source-files.js
src/colloquy/: Cargo.toml
src/colloquy/src/: cli.yml  main.rs
tests/: Exceptions.cpp  Ncpp.cpp  atliens.mkv  bidi.cpp  blit.cpp  bob.mkv  cell.cpp  channel.cpp  direct.cpp  egcpool.cpp  enmetric.cpp  exceptions.cpp  fade.cpp  fds.cpp  fills.cpp  geom.cpp  input.cpp  internal.cpp  layout.cpp  libav.cpp  libunistring.cpp  main.cpp  main.h  menu.cpp  metric.cpp  ncplane.cpp  ncpp.cpp  notcurses.cpp  notcursesI.avi  palette.cpp  panelreel.cpp  piles.cpp  plane.cpp  plot.cpp  progbar.cpp  reader.cpp  reel.cpp  reelgaps.cpp  render.cpp  resize.cpp  (+7 more)
tools/: APKBUILD  Notcurses++Config.cmake  Notcurses++Config.cmake.in  NotcursesConfig.cmake  NotcursesConfig.cmake.in  NotcursesCoreConfig.cmake  NotcursesCoreConfig.cmake.in  PKGBUILD  a.out  blame-nick.sh  builddef.h.in  debrelease.sh  emojiprep.sh  function-stats.bindgen_20200823.rs  function-stats.sh  function-table.sh  generate_ffi.py  interactive-tester.sh  neofetch-ripper  nuspec  (+13 more)
(+6361 files in other folders)
